8296417: Make memory session a pure lifetime abstraction
Reviewed-by: jvernee, pminborg